 * Added hooks to customise the actions menu on the page create/edit views (Matt Westcott)
 * Cleanup: Use `functools.partial()` instead of `django.utils.functional.curry()` (Sergey Fedoseev)
 * Squashed migrations for wagtailcore and wagtailimages (Karl Hobley)
 * Added `before_move_page` and `after_move_page` hooks (Maylon Pedroso)
 * Fix: Query objects returned from `PageQuerySet.type_q` can now be merged with `|` (Brady Moe)
 * Fix: Add `rel="noopener noreferrer"` to target blank links (Anselm Bradford)
 * Fix: Additional fields on custom document models now show on the multiple document upload view (Robert Rollins, Sergey Fedoseev)
 * Fix: Help text is partially hidden when using a combination of BooleanField and FieldPanel in page model (Dzianis Sheka)
 * Fix: Allow custom logos of any height in the admin menu (Meteor0id)
 * Fix: Allow nav menu to take up all available space instead of scrolling (Meteor0id)
 * Fix: Redirects now return 404 when destination is unspecified or a page with no site (Hillary Jeffrey)
 * Fix: Refactor all breakpoint definitions, removing style overlaps (Janneke Janssen)
 * Fix: Updated draftjs_exporter to 2.1.5 to fix bug in handling adjacent entities (Thibaud Colas)
 * Fix: Page titles consisting only of stopwords now generate a non-empty default slug (Andy Chosak, Janneke Janssen)
 * Fix: Sitemap generator now allows passing a sitemap instance in the URL configuration (Mitchel Cabuloy, Dan Braghis)


2.3 LTS (23.10.2018)
~~~~~~~~~~~~~~~~~~~~

 * Added support for Django 2.1 (Ryan Verner, Matt Westcott)
 * Improved colour contrast (Coen van der Kamp, Naomi Morduch Toubman, Naa Marteki Reed, Edd Baldry, Ben Enright)
 * Added 'scale' image filter (Oliver Wilkerson)
 * Added meta tag to prevent search engines from indexing admin pages (Karl Hobley)
 * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
 * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)